--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ repository = "https://github.com/phil-opp/bootimage"
 
 [dependencies]
 byteorder = "1.2.1"
-curl = "0.4.11"
-lapp = "0.3.1"
 toml = "0.4.5"
 xmas-elf = "0.6.1"
+cargo_metadata = "0.5.3"
