--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Tool to create a bootable OS image from a kernel binary."
 license = "MIT/Apache-2.0"
 name = "bootimage"
 version = "0.2.0"
-repository = "https://github.com/phil-opp/bootimage"
+repository = "https://github.com/rust-osdev/bootimage"
 
 [dependencies]
 byteorder = "1.2.1"
