--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ repository = "https://github.com/rust-osdev/bootimage"
 
 [dependencies]
 byteorder = "1.2.1"
+rayon = "1.0"
 toml = "0.4.5"
-xmas-elf = "0.6.1"
 wait-timeout = "0.1"
+xmas-elf = "0.6.1"
 
 [dependencies.cargo_metadata]
 version = "0.5.6"
