--- a/.travis.yml
+++ b/.travis.yml
@@ -42,5 +42,5 @@ before_script:
 script:
 - cargo test
 - cargo install --debug --force
-- git clone https://github.com/phil-opp/blog_os.git
+- git clone https://github.com/phil-opp/blog_os.git --branch post-10
 - if [ $TRAVIS_RUST_VERSION = nightly ]; then bootimage test --manifest-path blog_os/Cargo.toml; fi
