--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ license = "MIT/Apache-2.0"
 name = "bootimage"
 version = "0.6.6"
 repository = "https://github.com/rust-osdev/bootimage"
+edition = "2018"
 
 [dependencies]
 byteorder = "1.3.1"
