--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ rayon = "1.0"
 toml = "0.5.0"
 wait-timeout = "0.2"
 xmas-elf = "0.6.2"
+llvm-tools = "0.1.1"
+locate-cargo-manifest = "0.1.0"
 
 [dependencies.cargo_metadata]
 version = "0.7.4"
