--- a/example-kernels/testing-qemu-exit-code/Cargo.toml
+++ b/example-kernels/testing-qemu-exit-code/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "testing"
+name = "testing-qemu-exit-code"
 version = "0.1.0"
 authors = ["Philipp Oppermann <dev@phil-opp.com>"]
 edition = "2018"
@@ -7,8 +7,6 @@ edition = "2018"
 [dependencies]
 bootloader = "0.5.0"
 x86_64 = "0.5.3"
-spin = "0.4.9"
-uart_16550 = "0.1.0"
 
 [package.metadata.bootimage]
-default-target = "x86_64-testing.json"
+default-target = "../x86_64-bootimage-example-kernels.json"
