--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,12 @@ repository = "https://github.com/rust-osdev/bootimage"
 edition = "2018"
 
 [dependencies]
-byteorder = "1.3.1"
 rayon = "1.0"
 toml = "0.5.0"
 wait-timeout = "0.2"
-xmas-elf = "0.6.2"
 llvm-tools = "0.1.1"
 locate-cargo-manifest = "0.1.0"
-tempdir = "0.3.7"
+json = "0.11.13"
 
 [dependencies.cargo_metadata]
 version = "0.7.4"
