Convert runner args to config keys
Variable length args are not possible since the executable name is appended at the end

--- a/example-kernels/runner/Cargo.toml
+++ b/example-kernels/runner/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 [dependencies]
 bootloader = "0.5.0"
 x86_64 = "0.5.3"
+
+[package.metadata.bootimage]
+run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"]
