--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -198,3 +198,48 @@ jobs:
       if [ $? -eq 109 ]; then (exit 0); else (exit 1); fi
     workingDirectory: example-kernels/runner
     displayName: 'Run `cargo xrun` for "runner" kernel'
+
+- job: formatting
+  displayName: Check Formatting
+
+  strategy:
+    matrix:
+      linux:
+        image_name: 'ubuntu-16.04'
+        rustup_toolchain: stable
+
+  pool:
+    vmImage: $(image_name)
+
+  steps:
+  - bash: |
+      echo "Hello world from $AGENT_NAME running on $AGENT_OS"
+      echo "Reason: $BUILD_REASON"
+      case "$BUILD_REASON" in
+              "Manual") echo "$BUILD_REQUESTEDFOR manually queued the build." ;;
+              "PullRequest") echo "This is a CI build for a pull request on $BUILD_REQUESTEDFOR." ;;
+              "IndividualCI") echo "This is a CI build for $BUILD_REQUESTEDFOR." ;;
+              "BatchedCI") echo "This is a batched CI build for $BUILD_REQUESTEDFOR." ;;
+          *) "$BUILD_REASON" ;;
+      esac
+    displayName: 'Build Info'
+    continueOnError: true
+
+  - script: |
+      set -euxo pipefail
+      curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain $RUSTUP_TOOLCHAIN
+      echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"
+    condition: or(eq( variables['Agent.OS'], 'Linux' ),  eq( variables['Agent.OS'], 'Darwin' ))
+    displayName: 'Install Rust'
+
+  - script: |
+      rustc -Vv
+      cargo -V
+    displayName: 'Print Rust Version'
+    continueOnError: true
+
+  - script: rustup component add rustfmt
+    displayName: 'Install Rustfmt'
+
+  - script: cargo fmt -- --check
+    displayName: 'Check Formatting'
