Add a runner-test kernel for testing new runner functionality

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -199,6 +199,10 @@ jobs:
     workingDirectory: example-kernels/runner
     displayName: 'Run `cargo xrun` for "runner" kernel'
 
+  - script: cargo xtest
+    workingDirectory: example-kernels/runner-test
+    displayName: 'Run `cargo xtest` for "runner-test" kernel'
+
 - job: formatting
   displayName: Check Formatting
 
