--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,14 +46,12 @@ jobs:
     condition: or(eq( variables['Agent.OS'], 'Linux' ),  eq( variables['Agent.OS'], 'Darwin' ))
     displayName: 'Install Rust (Linux/macOS)'
 
-  - script: curl -sSf -o rustup-init.exe https://win.rustup.rs && rustup-init.exe -y --default-toolchain %RUSTUP_TOOLCHAIN%
+  - bash: rustup default $RUSTUP_TOOLCHAIN
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
-    displayName: 'Install Rust (Windows)'
+    displayName: 'Set Rust Toolchain (Windows)'
 
-  - script: |
-      echo ##vso[task.setvariable variable=PATH;]%PATH%;%USERPROFILE%\.cargo\bin
-    condition: eq( variables['Agent.OS'], 'Windows_NT' )
-    displayName: 'Add ~/.cargo/bin to PATH (Windows)'
+  - bash: rustup update $RUSTUP_TOOLCHAIN
+    displayName: 'Run Rustup Update'
 
   - script: |
       rustc -Vv
@@ -107,14 +105,12 @@ jobs:
     condition: or(eq( variables['Agent.OS'], 'Linux' ),  eq( variables['Agent.OS'], 'Darwin' ))
     displayName: 'Install Rust (Linux/macOS)'
 
-  - script: curl -sSf -o rustup-init.exe https://win.rustup.rs && rustup-init.exe -y --default-toolchain %RUSTUP_TOOLCHAIN%
+  - bash: rustup default $RUSTUP_TOOLCHAIN
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
-    displayName: 'Install Rust (Windows)'
+    displayName: 'Set Rust Toolchain (Windows)'
 
-  - script: |
-      echo ##vso[task.setvariable variable=PATH;]%PATH%;%USERPROFILE%\.cargo\bin
-    condition: eq( variables['Agent.OS'], 'Windows_NT' )
-    displayName: 'Add ~/.cargo/bin to PATH (Windows)'
+  - bash: rustup update $RUSTUP_TOOLCHAIN
+    displayName: 'Run Rustup Update'
 
   - script: |
       rustc -Vv
