--- a/example-kernels/Cargo.toml
+++ b/example-kernels/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "default-target-bootimage",
     "default-target-cargo",
     "runner",
+    "runner-doctest",
     "runner-test",
     "testing-qemu-exit-code",
     "testing-serial-result",
