--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ on:
   pull_request:
 
 jobs:
-  build:
-    name: "Build"
+  test:
+    name: "Test"
 
     strategy:
       matrix:
@@ -57,45 +57,8 @@ jobs:
     - name: "Install it"
       run: cargo install --path .
 
-    - name: "Upload Artifact"
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ env.name }}-bootimage
-        path: ~/.cargo/bin/
-
-  test:
-    name: "Test"
-    needs: build
-
-    strategy:
-      matrix:
-        platform: [
-          ubuntu-latest,
-          macos-latest,
-          windows-latest
-        ]
-
-    runs-on: ${{ matrix.platform }}
-    timeout-minutes: 15
-
-    steps:
-    - name: "Checkout Repository"
-      uses: actions/checkout@v1
-
-    - name: "Download Bootimage Artifact"
-      uses: actions/download-artifact@v2
-      with:
-        name: ${{ env.name }}-bootimage
-        path: bin/
-
-    - name: "Add `bin` to PATH"
-      run: echo ::add-path::bin
-
-    - name: Install Rustup (macOS)
-      run: |
-        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-        echo ::add-path::$HOME/.cargo/bin
-      if: runner.os == 'macOS'
+    - name: "Switch to Rust nightly"
+      run: rustup default nightly
 
     - name: "Install Rustup Components"
       run: rustup component add rust-src llvm-tools-preview
