--- a/example-kernels/runner-test/Cargo.toml
+++ b/example-kernels/runner-test/Cargo.toml
@@ -11,6 +11,7 @@ harness = false
 [dependencies]
 bootloader = "0.9.7"
 x86_64 = "0.11.0"
+rlibc = "1.0.0"
 
 [package.metadata.bootimage]
 test-success-exit-code = 33 # (0x10 << 1) | 1
