Don't deny warnings for clippy

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -139,4 +139,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - run: rustup toolchain install nightly --profile minimal --component clippy
-    - run: cargo +nightly clippy -- -D warnings
+    - name: "Run `cargo clippy`"
+      uses: actions-rs/cargo@v1
+      with:
+        command: clippy
